Bug 1196159 - Set nsGlobalWindow::mIsClosed properly after window.close(). r=billm